--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -2,6 +2,24 @@
     width: 85%;
     height: 90vh;
     margin: 0 auto;
+    padding: 3vh 0 0 0;
     display: grid;
-    grid-template-columns: 40% 20% 40%;
+    grid-template-columns: 65% 35% ;
 }
+
+.btnAndName{
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  z-index: 9;
+  gap: 30px;
+}
+
+.btnAndName span{
+  font-size: 47px;
+  font-weight: 700;
+}
+
