--- a/src/components/Inicio/Botones/botones.module.css
+++ b/src/components/Inicio/Botones/botones.module.css
@@ -11,6 +11,7 @@
 
 
 button {
+ 
   background-color: rgb(2, 0, 13);
   width: 160px;
   height: 50px;
@@ -22,7 +23,7 @@ button {
     align-items: center;
     text-align: center;
     font-weight: bold;
-    padding: 0.7em 2em;
+    /* padding: 0.7em 2em; */
     border: 3px solid rgb(4, 197, 72);
     border-radius: 5px;
     position: relative;
@@ -34,6 +35,7 @@ button {
   }
   
   button:before {
+   
     transition: 0.3s all ease;
     position: absolute;
     top: 0;
@@ -60,3 +62,11 @@ button {
   button:active {
     transform: scale(0.9);
   }
+
+ .a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+ }
