--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -9,7 +9,7 @@
 
 .btnAndName{
   width: 100%;
-  height: 60%;
+  height: 75%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,6 +20,12 @@
 
 .btnAndName span{
   font-size: 47px;
+  text-align: center;
   font-weight: 700;
 }
 
+.full{
+  display: flex;
+  width: 60%;
+  height: 75%;
+}
