--- a/src/components/Inicio/FullStack/FullStack.module.css
+++ b/src/components/Inicio/FullStack/FullStack.module.css
@@ -1,6 +1,6 @@
 .FullStack{
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   gap: 30px;
@@ -9,4 +9,10 @@
 .span{
     font-size: 47px;
     font-weight: 700;
+}
+
+p{
+ font-size: 1.2rem;
+ font-weight: 500;
+ 
 }
