--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -4,15 +4,18 @@
     margin: 0 auto;
     padding: 3vh 0 0 0;
     display: grid;
+    align-items: center;
+    justify-content: center;
     grid-template-columns: 65% 35% ;
 }
 
 .btnAndName{
   width: 100%;
-  height: 75%;
+  height: 100%;
+  padding: 13vh 0 0 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-end;
   z-index: 9;
   gap: 30px;
@@ -26,6 +29,8 @@
 
 .full{
   display: flex;
-  width: 60%;
-  height: 75%;
+  padding: 13vh 0 0 0;
+
+  width: 55%;
+  height: 100%;
 }
