--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -12,7 +12,7 @@
 .btnAndName{
   width: 100%;
   height: 100%;
-  padding: 8vh 0 0 0;
+  padding: 10vh 0 0 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -28,9 +28,10 @@
 }
 
 .full{
+  z-index: 9;
   min-width: 400px;
   display: flex;
-  padding: 8vh 0 0 0;
+  padding: 10vh 0 0 0;
 
   width: 55%;
   height: 100%;
