--- a/src/components/Inicio/Botones/botones.module.css
+++ b/src/components/Inicio/Botones/botones.module.css
@@ -25,7 +25,7 @@ button {
     font-weight: bold;
     /* padding: 0.7em 2em; */
     border: 3px solid rgb(4, 197, 72);
-    border-radius: 5px;
+    border-radius: 7px;
     position: relative;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
     color: rgb(4, 197, 72);
@@ -64,6 +64,8 @@ button {
   }
 
  .a{
+  font-size: 1.3rem;
+  font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
