--- a/src/components/SobreMi/SobreMi.module.css
+++ b/src/components/SobreMi/SobreMi.module.css
@@ -7,11 +7,17 @@
 article{
     display: grid;
     grid-template-columns: 50% 50%;
-    align-items: center;
-    justify-self: center;
+    /* align-items: center; */
+    padding: 10vh 0 0 0;
+  }
+
+.img{
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-img{
+.img img{
     width: 250px;
     border-radius: 50%;
 }
