--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -1,1 +1,56 @@
- 
+.Proyectos{
+  width: 85%;
+  height: auto;
+  margin: auto;
+  padding: 6vh 0;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns:35% 65%;
+}
+
+.cards{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 22px;
+}
+
+.card{
+    width: 300px;
+    height: 380px;
+   
+}
+
+.card .image img{
+    width: 100%;
+    height: 170px;
+}
+
+.tecno img{
+    width: 30px;
+
+}
+
+.btns{
+    display: flex;
+    gap: 15px;
+}
+
+.btns div{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+}
+.btns a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btns img, svg{
+  width: 25px;
+  filter: invert(100%) sepia(0%) saturate(3583%) hue-rotate(326deg) brightness(114%) contrast(104%);
+}
