--- a/src/components/Inicio/FullStack/FullStack.module.css
+++ b/src/components/Inicio/FullStack/FullStack.module.css
@@ -44,7 +44,7 @@ p{
 }
 
 .body .text {
-  margin: 0 10px 0 0;
+  margin: 0 10px 0 0; 
   white-space: pre-line;
   color:  #f5f5dc;
   font-weight: 400;
@@ -55,8 +55,8 @@ p{
 .footer {
   position: relative;
   width: 100%;
-  color: #9fa4aa;
-  font-size: 12px;
+  color: #0f488e;
+  font-size: 13px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -75,7 +75,8 @@ p{
 .footer svg {
   margin-right: 5px;
   height: 100%;
-  stroke: rgb(4, 197, 72);
+  stroke: rgb(132, 11, 11);
+  filter: invert(100%) sepia(0%) saturate(27%) hue-rotate(96deg) brightness(108%) contrast(100%);
 }
 
 .viewer span {
@@ -86,6 +87,7 @@ p{
   border-radius: 50%;
   border: 1px solid #070707;
   display: grid;
+  display: none;
   align-items: center;
   text-align: center;
   font-weight: bold;
@@ -96,7 +98,10 @@ p{
 
 .viewer span svg {
   stroke: #fff;
+ 
 }
+
+
 
 
 
