--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -17,22 +17,40 @@
 }
 
 .card{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 300px;
     height: 380px;
+    /* border: 1px solid rgb(4, 197, 72); */
+    border-radius:10px ;
    
 }
 
 .card .image img{
     width: 100%;
     height: 170px;
+    border-radius: 9px;
+}
+
+.tecno{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: flex-start;
+    gap: 5px;
 }
 
 .tecno img{
     width: 30px;
-
 }
 
 .btns{
+    width: 100%;
+    height: 50px;
+    align-items: center;
     display: flex;
     gap: 15px;
 }
@@ -53,4 +71,17 @@
 .btns img, svg{
   width: 25px;
   filter: invert(100%) sepia(0%) saturate(3583%) hue-rotate(326deg) brightness(114%) contrast(104%);
+}
+h3{
+    color: rgb(4, 197, 72);
+}
+
+
+.card .descrip{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    color: #f5f5dc;
 }
