--- a/src/components/SobreMi/SobreMi.module.css
+++ b/src/components/SobreMi/SobreMi.module.css
@@ -80,7 +80,8 @@ h1{
   .footer svg {
     margin-right: 5px;
     height: 100%;
-    stroke: rgb(4, 197, 72);
+    stroke: rgb(0, 0, 0);
+    filter: invert(100%) sepia(0%) saturate(27%) hue-rotate(96deg) brightness(108%) contrast(100%);
   }
   
   .viewer span {
@@ -89,8 +90,9 @@ h1{
     background-color: rgb(4, 197, 72);
     margin-right: -6px;
     border-radius: 50%;
-    border: 1px solid #070707;
+    border: 1px solid #e4d7d7;
     display: grid;
+    display: none;
     align-items: center;
     text-align: center;
     font-weight: bold;
