--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -5,39 +5,46 @@
   padding: 6vh 0;
   min-height: 100vh;
   display: grid;
-  grid-template-columns:35% 65%;
+  grid-template-columns:30% 70%;
 }
 
 .cards{
   width: 100%;
   height: 100%;
   display: flex;
+  justify-content: flex-end;
   flex-wrap: wrap;
   gap: 22px;
 }
 
 .card{
-    background-color: black;
+    background-color: rgb(1, 0, 8);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 300px;
     height: 380px;
-    /* border: 1px solid rgb(4, 197, 72); */
+    border: 1px solid rgb(4, 197, 72);
     border-radius:10px ;
+    transition: transform 0.3s ease-in-out;
    
+}
+.card:hover{
+    transform: translateY(-5px);
 }
 
 .card .image img{
     width: 100%;
     height: 170px;
     border-radius: 9px;
+    opacity: .7;
 }
 
 .tecno{
     width: 100%;
     height: 40px;
+    padding: 0 10px;
     display: flex;
     align-items: flex-start;
     gap: 5px;
@@ -47,11 +54,15 @@
     width: 30px;
 }
 
+
+
 .btns{
     width: 100%;
     height: 50px;
-    align-items: center;
+    padding: 0 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
 }
 
@@ -82,6 +93,45 @@ h3{
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 0 10px;
+
     height: 80px;
     color: #f5f5dc;
+}
+
+.servicios{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.servicios h2{
+    font-size:27px;
+}
+
+.habi{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 2px;
+    flex-wrap: wrap;
+}
+
+.habi div{
+    width: 80px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.habi div h5{
+    font-size: 10px;
+    text-align: center;
+}
+
+.habi div img{
+    width: 45px;
 }
