--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -5,7 +5,7 @@
   padding: 6vh 0;
   min-height: 100vh;
   display: grid;
-  grid-template-columns:30% 70%;
+  grid-template-columns:35% 65%;
 }
 
 .cards{
@@ -116,6 +116,7 @@ h3{
     align-items: flex-end;
     gap: 2px;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
 .habi div{
@@ -134,4 +135,37 @@ h3{
 
 .habi div img{
     width: 45px;
+}
+
+.metodo{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.metodo div{
+  width: 170px;
+  height: 200px;
+  border: 2px solid  rgb(4, 197, 72);
+  border-radius: 10px;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+.metodo p{
+    font-size: 15px;
+    text-align: center;
+}
+
+.metodo div img{
+    width: 45px;
+}
+
+h2{
+    margin-bottom: 10px;
 }
