--- a/src/components/Inicio/Botones/botones.module.css
+++ b/src/components/Inicio/Botones/botones.module.css
@@ -72,3 +72,13 @@ button {
   width: 100%;
   height: 100%;
  }
+
+ @media (max-width: 800px){
+  .Botones{
+    padding: 0;
+    display: flex;
+    flex-direction: initial;
+    justify-content: center;
+    padding: 10px;
+  }
+ }
