--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -36,3 +36,32 @@
   width: 55%;
   height: 100%;
 }
+
+@media (max-width: 800px){
+  
+  .Home{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    padding:0;
+  }
+  
+  .full{
+    padding: 3vh 0 0 0;
+    width: 85%;
+    height: 100%;
+    margin: 0 auto;
+  }
+
+  .btnAndName{
+    padding: 0;
+    /* margin: 0; */
+    width: 300px;
+    height: 200px;
+  }
+
+  .btnAndName span{ 
+    display: none;
+  }
+}
