--- a/src/components/Inicio/Botones/botones.module.css
+++ b/src/components/Inicio/Botones/botones.module.css
@@ -79,6 +79,10 @@ button {
     display: flex;
     flex-direction: initial;
     justify-content: center;
-    padding: 10px;
+    margin-top: 15px;
+  }
+  .Botones button{
+    width: 125px;
+    height: 47px;
   }
  }
