--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -53,14 +53,17 @@ span{
     }
 
     .nav_mobile{
+        z-index: 99;
+        background-color: rgb(2, 0, 13);
         position: absolute;
+        position: fixed;
         bottom: 0;
         right: 50%;
         transform: translateX(50%);
         width: 85%;
         border: 2px solid rgb(4, 197, 72);
-        border-radius: 40px;
-        margin-bottom:10px ;
+        border-radius: 5px;
+        margin-bottom:.5px ;
         height: 8vh;
         display: flex;
         align-items: center;
@@ -68,8 +71,10 @@ span{
     }
 
     .nav_mobile img{
-        filter: invert(6%) sepia(66%) saturate(7386%) hue-rotate(305deg) brightness(75%) contrast(103%);
         width: 30px;
+        
+
+        filter: invert(92%) sepia(21%) saturate(193%) hue-rotate(13deg) brightness(105%) contrast(92%);
     }
 
 }
