--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -40,6 +40,7 @@
 @media (max-width: 800px){
   
   .Home{
+    max-width: 600px;
     width: 100%;
     height: auto;
     display: flex;
@@ -48,7 +49,7 @@
   }
   
   .full{
-    padding: 3vh 0 0 0;
+    padding:  0 0 0;
     width: 85%;
     height: 100%;
     margin: 0 auto;
