--- a/src/components/Inicio/FullStack/FullStack.module.css
+++ b/src/components/Inicio/FullStack/FullStack.module.css
@@ -112,6 +112,9 @@ p{
 
   .FullStack{
     gap: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .span_mobile{
