--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -42,7 +42,8 @@
   .Home{
     max-width: 600px;
     width: 100%;
-    height: 80vh;
+    height: auto;
+    min-height: 72vh;
     display: flex;
     justify-content: center;
     flex-direction: column;
