--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -169,3 +169,22 @@ h3{
 h2{
     margin-bottom: 10px;
 }
+
+
+
+@media (max-width: 800px){
+   .Proyectos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 2vh 0 15vh 0;
+   } 
+
+   .habi, .metodo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+}
