--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -187,4 +187,10 @@ h2{
     justify-content: center;
     align-items: center;
    }
+
+   .cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
 }
