--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -50,6 +50,10 @@ span{
     .header{
         position:static ;
         grid-template-columns: 50% 50%;
+
+    }
+
+    .nav{
     }
 
     .nav_mobile{
