--- a/src/components/SobreMi/SobreMi.module.css
+++ b/src/components/SobreMi/SobreMi.module.css
@@ -185,11 +185,7 @@ h1{
     filter: blur(5px);
   }
   
-  .container span:nth-of-type(2) {
-    filter: blur(10px);
-  }
-  
-  .container span:nth-of-type(3) {
+  .container span:nth-of-type(2) { min-width: 310px;
     filter: blur(25px);
   }
   
@@ -217,5 +213,35 @@ h1{
     to {
       transform: translate(-50%, -50%) rotate(360deg);
     }
+  }
+  
+
+  @media (max-width: 800px){
+    .container{
+      display: none;
+    }
+
+    .cards{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .cards .card{
+      min-width: 100%;
+    }
+
+    article{
+      display: flex;
+      flex-direction: column;
+      padding: 2vh 0 15vh 0;
+    }
+
+    .img img{
+      width: 200px;
+      z-index: 99;
+    }
+
+  
   }
   
