--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -66,7 +66,7 @@ span{
         transform: translateX(50%);
         width: 85%;
         border: 2px solid rgb(4, 197, 72);
-        border-radius: 5px;
+        border-radius: 10px;
         margin-bottom:.5px ;
         height: 8vh;
         display: flex;
@@ -81,4 +81,10 @@ span{
         filter: invert(92%) sepia(21%) saturate(193%) hue-rotate(13deg) brightness(105%) contrast(92%);
     }
 
+}
+
+@media (max-width: 950px){
+    .nav{
+        border-right: none;
+    }
 }
