--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -155,6 +155,11 @@ h3{
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.metodo div:hover{
+    transform: translateY(-5px);
 }
 
 .metodo p{
