--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
   font-family: "Courier New", Courier, monospace;
 }
 
-body::-webkit-scrollbar{
+/* body::-webkit-scrollbar{
   width: 15px;
 }
 
@@ -21,7 +21,7 @@ body::-webkit-scrollbar-thumb{
 
 body::-webkit-scrollbar-thumb:hover{
   background-color: rgb(4, 245, 88);
-}
+} */
 
 h1, h2 ,h3,h5, p, span {
 cursor: default;
@@ -155,3 +155,5 @@ body.dark .maquina::after{
   background-color:  rgb(28, 26, 26);
 
 } */
+
+
