--- a/src/components/SobreMi/SobreMi.module.css
+++ b/src/components/SobreMi/SobreMi.module.css
@@ -1,7 +1,9 @@
 .SobreMi{
+  position: absolute;
+  right: 15%;
     width: 85%;
     height: 90vh;
-    margin:0 auto;
+    margin:0 auto; 
     
 }
 
