--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -26,7 +26,7 @@
     align-items: center;
     width: 300px;
     height: 380px;
-    border: 1px solid rgb(4, 197, 72);
+    border: 1px solid rgb(90 101 94);
     border-radius:10px ;
     transition: transform 0.3s ease-in-out;
    
