--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -156,7 +156,7 @@ h3{
 .metodo div{
   width: 170px;
   height: 200px;
-  border: 2px solid  rgb(4, 197, 72);
+  border: 2px solid  rgb(90 101 94);
   border-radius: 10px;
   padding: 10px 0;
   display: flex;
