--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -84,6 +84,11 @@
   width: 25px;
   filter: invert(100%) sepia(0%) saturate(3583%) hue-rotate(326deg) brightness(114%) contrast(104%);
 }
+
+.btns img:hover{
+    filter: invert(52%) sepia(87%) saturate(1542%) hue-rotate(99deg) brightness(95%) contrast(97%);
+    transition: all .2s ease-in-out;
+}
 h3{
     color: rgb(4, 197, 72);
 }
