--- a/src/components/SobreMi/SobreMi.module.css
+++ b/src/components/SobreMi/SobreMi.module.css
@@ -8,7 +8,7 @@
 
 article{
   width: 100%;
-  padding: 4vh 0 0 0;
+  padding: 5vh 0 0 0;
   display: grid;
   gap: 5rem;
   /* grid-auto-rows: 25rem; */
@@ -23,6 +23,7 @@ article{
 }
 
 .img img{
+  z-index: 99;
   width: 250px;
   border-radius: 50%;
   border: 2px solid rgb(4, 197, 72);
