--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -3,7 +3,7 @@
     width: 85%;
     height: 90vh;
     margin: 0 auto;
-    padding-bottom: 10vh;
+    padding: 2vh 0 0 0;
     display: grid;
     align-items: center;
     justify-content: center;
