--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -3,7 +3,6 @@
     width: 85%;
     height: 90vh;
     margin: 0 auto;
-    padding: 2vh 0 0 0;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -13,13 +12,13 @@
 .btnAndName{
   width: 100%;
   height: 100%;
-  padding: 12vh 0 0 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
   z-index: 9;
-  gap: 30px;
+  gap: 20px;
+  padding-top: 11vh;
 }
 
 .btnAndName span{
@@ -32,10 +31,11 @@
   z-index: 9;
   min-width: 415px;
   display: flex;
-  padding: 12vh 0 0 0;
-
+  justify-content: center;
+  align-items: center;
   width: 55%;
   height: 100%;
+  padding-bottom:10vh ;
 }
 
 @media (max-width: 800px){
