--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -22,11 +22,10 @@
     background-color: rgb(1, 0, 8);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 300px;
     height: 380px;
-    border: 1px solid rgb(90 101 94);
+    border: 1px solid rgb(41, 43, 42);
     border-radius:10px ;
     transition: transform 0.3s ease-in-out;
    
@@ -39,7 +38,7 @@
     width: 100%;
     height: 170px;
     border-radius: 9px;
-    opacity: .7;
+    opacity: .8;
 }
 
 .tecno{
@@ -161,12 +160,12 @@ h3{
 .metodo div{
   width: 170px;
   height: 200px;
-  border: 2px solid  rgb(90 101 94);
+  border: 2px solid  rgb(41, 43, 42);
   border-radius: 10px;
   padding: 10px 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 20px;
   transition: transform 0.3s ease-in-out;
