--- a/src/components/SobreMi/SobreMi.module.css
+++ b/src/components/SobreMi/SobreMi.module.css
@@ -8,9 +8,13 @@
 
 article{
   width: 100%;
-  padding: 5vh 0 0 0;
+  height: auto;
+  min-height: 90vh;
   display: grid;
+  justify-content: center;
+  align-items: center;
   gap: 5rem;
+  padding-bottom: 10vh;
   /* grid-auto-rows: 25rem; */
   grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   }
