--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -1,8 +1,10 @@
 .Home{
     
     width: 85%;
-    height: 90vh;
+    height: auto;
+    min-height: 70vh;
     margin: 0 auto;
+    margin-top: 12vh;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -18,7 +20,6 @@
   align-items: flex-end;
   z-index: 9;
   gap: 20px;
-  padding-top: 11vh;
 }
 
 .btnAndName span{
@@ -32,10 +33,9 @@
   min-width: 415px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 55%;
   height: 100%;
-  padding-bottom:10vh ;
 }
 
 @media (max-width: 800px){
@@ -50,6 +50,7 @@
     justify-content: center;
     flex-direction: column;
     padding:0;
+    margin-top: initial;
   }
   
   .full{
