--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,18 @@ body{
   font-family: "Courier New", Courier, monospace;
 }
 
-/* body::-webkit-scrollbar{
-  width: 15px;
+body::-webkit-scrollbar{
+  width: 0;
 }
 
 body::-webkit-scrollbar-thumb{
-  background-color: rgb(4, 197, 72);
+  background-color: rgb(2, 0, 13);
   border-radius: 10px;
 }
 
 body::-webkit-scrollbar-thumb:hover{
-  background-color: rgb(4, 245, 88);
-} */
+  background-color: rgb(2, 0, 13);
+}
 
 h1, h2 ,h3,h5, p, span {
 cursor: default;
