--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -5,17 +5,23 @@
   margin: auto;
   padding: 6vh 0;
   min-height: 100vh;
-  display: grid;
-  grid-template-columns:35% 65%;
+  /* display: grid;
+  grid-template-columns:35% 65%; */
+  display: flex;
+  flex-direction: column;
 }
 
 .cards{
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   flex-wrap: wrap;
-  gap: 22px;
+  gap: 40px;
+}
+
+.h2S{
+ margin-bottom: 40px;
 }
 
 .card{
@@ -108,7 +114,12 @@ h3{
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    text-align: center;
+    gap: 20px;
+    margin-bottom: 40px;
 }
 
 .servicios h2{
@@ -117,9 +128,8 @@ h3{
 
 .habi{
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-    gap: 2px;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     margin-bottom: 20px;
 }
@@ -154,7 +164,7 @@ h3{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 40px;
 }
 
 .metodo div{
