--- a/src/components/Inicio/inicio.module.css
+++ b/src/components/Inicio/inicio.module.css
@@ -13,7 +13,7 @@
 
 .btnAndName{
   width: 100%;
-  height: 100%;
+  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -35,7 +35,7 @@
   justify-content: center;
   align-items: flex-start;
   width: 55%;
-  height: 100%;
+  height: 400px;
 }
 
 @media (max-width: 800px){
