--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -128,6 +128,7 @@ h3{
 }
 
 .habi{
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -223,5 +224,11 @@ h2{
     display: flex;
     justify-content: center;
     align-items: center;
+   }
+}
+
+@media (max-width: 650px){
+   .habi{
+    width: 100%;
    }
 }
