--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -43,8 +43,8 @@
 .card .image img{
     width: 100%;
     height: 170px;
-    border-radius: 9px;
-    opacity: .8;
+    border-radius: 9px 9px 0 0;
+    opacity: .7;
 }
 
 .tecno{
