--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -1,5 +1,5 @@
 .Proyectos{
-  
+  transform: scale(-1);
   width: 85%;
   height: auto;
   margin: auto;
@@ -12,6 +12,7 @@
 }
 
 .cards{
+    transform: scale(-1);
   width: 100%;
   height: 100%;
   display: flex;
@@ -112,6 +113,7 @@ h3{
 }
 
 .servicios{
+    transform: scale(-1);
     width: 100%;
     height: 100%;
     display: flex;
