--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,4 +1,6 @@
 .header{
+    position: sticky;
+    top: 0;
     background-color: rgb(0, 0, 0);
     position: sticky;
     top: 0;
@@ -8,7 +10,7 @@
     display: grid;
     grid-template-columns: 10% 74.5% 15.5% ;
     align-items: center;
-    z-index: 9;
+    z-index: 999;
 }
 
 a{
@@ -56,7 +58,9 @@ span{
     }
 
     .header{
-        position:static ;
+        z-index: 999;
+        position:sticky;
+        top: 0;
         grid-template-columns: 50% 50%;
 
     }
