--- a/src/components/Proyectos/Proyectos.module.css
+++ b/src/components/Proyectos/Proyectos.module.css
@@ -115,7 +115,7 @@ h3{
 .servicios{
     transform: scale(-1);
     width: 100%;
-    height: 100%;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
