--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 body{
   background-color: rgb(0, 0, 0);
-  font-family: "Courier New", Courier, monospace;
+  font-family: math ;
 }
 
 body::-webkit-scrollbar{
